--- a/index.html
+++ b/index.html
@@ -1,1 +1,200 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Entrar</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f4f4f4;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      position: relative;
+      overflow: hidden;
+    }
+
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .container {
+      background: white;
+      padding: 45px 35px;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+      width: 90%;
+      max-width: 420px;
+      animation: fadeInUp 0.8s ease-out;
+    }
+
+    h1 {
+      color: #222;
+      font-size: 28px;
+      margin-bottom: 25px;
+      font-weight: 600;
+      animation: fadeInUp 0.8s ease-out 0.2s both;
+    }
+
+    .input-group {
+      margin-bottom: 18px;
+      animation: fadeInUp 0.8s ease-out 0.4s both;
+    }
+
+    input {
+      width: 100%;
+      padding: 14px 16px;
+      border: 2px solid #ddd;
+      border-radius: 8px;
+      font-size: 16px;
+      transition: all 0.3s ease;
+      outline: none;
+    }
+
+    input:focus {
+      border-color: #007bff;
+      box-shadow: 0 0 0 4px rgba(0, 123, 255, 0.15);
+      transform: translateY(-2px);
+    }
+
+    button {
+      background: linear-gradient(135deg, #007bff, #0056b3);
+      color: white;
+      border: none;
+      padding: 16px;
+      width: 100%;
+      font-size: 18px;
+      font-weight: 600;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-top: 10px;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 15px rgba(0, 123, 255, 0.3);
+      animation: fadeInUp 0.8s ease-out 0.6s both;
+    }
+
+    button:hover {
+      transform: translateY(-3px) scale(1.02);
+      box-shadow: 0 10px 25px rgba(0, 123, 255, 0.4);
+    }
+
+    #mensagem {
+      margin-top: 18px;
+      font-size: 15px;
+      min-height: 22px;
+      animation: fadeInUp 0.8s ease-out 0.7s both;
+    }
+
+    .erro {
+      color: #e74c3c;
+      font-weight: 500;
+    }
+
+    .sucesso {
+      color: #27ae60;
+      font-weight: 500;
+    }
+
+    .register-link {
+      margin-top: 20px;
+      animation: fadeInUp 0.8s ease-out 0.8s both;
+    }
+
+    .register-link a {
+      color: #007bff;
+      text-decoration: none;
+      font-weight: 500;
+      transition: all 0.3s;
+    }
+
+    .register-link a:hover {
+      color: #0056b3;
+      text-decoration: underline;
+    }
+
+    /* Responsivo */
+    @media (max-width: 480px) {
+      .container {
+        padding: 35px 25px;
+        margin: 20px;
+      }
+      h1 {
+        font-size: 26px;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <div class="container">
+    <h1>Entrar</h1>
+
+    <div class="input-group">
+      <input type="text" id="usuario" placeholder="Nome de usuário" autocomplete="username">
+    </div>
+
+    <div class="input-group">
+      <input type="password" id="senha" placeholder="Senha" autocomplete="current-password">
+    </div>
+
+    <button onclick="entrar()">Entrar na Conta</button>
+
+    <p id="mensagem"></p>
+
+    <div class="register-link">
+      <p>Não tem conta? <a href="Login.html">Criar uma agora</a></p>
+    </div>
+  </div>
+
+  <script>
+    function entrar() {
+      const usuario = document.getElementById("usuario").value.trim();
+      const senha = document.getElementById("senha").value;
+      const mensagem = document.getElementById("mensagem");
+
+      // Limpa mensagem anterior
+      mensagem.className = "";
+      mensagem.innerText = "";
+
+      if (!usuario || !senha) {
+        mensagem.className = "erro";
+        mensagem.innerText = "⚠ Preencha usuário e senha!";
+        return;
+      }
+
+      const usuarios = JSON.parse(localStorage.getItem("usuarios")) || {};
+
+      if (usuarios[usuario] && usuarios[usuario].senha === senha) {
+        localStorage.setItem("usuarioLogado", usuario);
+        mensagem.className = "sucesso";
+        mensagem.innerText = "✓ Login realizado! Redirecionando...";
+
+        setTimeout(() => {
+          window.location.href = "index.html";  // ou "Home.html", conforme seu arquivo principal
+        }, 800);
+      } else {
+        mensagem.className = "erro";
+        mensagem.innerText = "✕ Usuário ou senha incorretos!";
+      }
+    }
+
+    // Enter para loga
+    document.addEventListener("keypress", function(e) {
+      if (e.key === "Enter") {
+        entrar();
+      }
+    });
+  </script>
+
+</body>
+</html>
