--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         mensagem.innerText = "✓ Login realizado! Redirecionando...";
 
         setTimeout(() => {
-          window.location.href = "index.html";  // ou "Home.html", conforme seu arquivo principal
+          window.location.href = "home.html";  // ou "Home.html", conforme seu arquivo principal
         }, 800);
       } else {
         mensagem.className = "erro";
