--- a/links.html
+++ b/links.html
@@ -196,7 +196,7 @@
 <body>
 
     <!-- Navegação animada -->
-    <a href="index.html" class="nav-link" style="left: 20px;">Home</a>
+    <a href="home.html" class="nav-link" style="left: 20px;">Home</a>
     <a href="conta.html" class="nav-link" style="right: 20px;">Conta</a>
 
     <div class="container">
@@ -213,7 +213,7 @@
         </div>
 
         <div class="back-link">
-            <a href="index.html">Voltar para a Home</a>
+            <a href="home.html">Voltar para a Home</a>
         </div>
     </div>
 
