--- a/Login.html
+++ b/Login.html
@@ -149,7 +149,7 @@
     <p id="mensagem"></p>
 
     <div class="login-link">
-      <p>Já tem conta? <a href="entrar.html">Entrar agora</a></p>
+      <p>Já tem conta? <a href="index.html">Entrar agora</a></p>
     </div>
   </div>
 
@@ -198,3 +198,4 @@
 
 </body>
 </html>
+
